2003-11-23  Andras Varga

	* cdispstr.h: insertTag() return value changed from bool to int.

	* ccoroutine.h: MSVC version check fixed (#if _MSC_VER==1200 changed
	to #if _MSC_VER>=1200)

2003-11-13  Andras Varga

	* Checked in parallel simulation code that was developed March-May 2003,
	during my stay at Monash University. Changes:

	2003-05-21  Andras Varga
	* cobject.h: introduced cPolymorphic base class for cObject,
	with the purpose of strengthening type safety by using cPolymorphic
	at places where normally void * pointers would have been used.
	className() moved from cObject to cPolymorphic. cPolymorphic has
	no data members and ctor/dtor doesn't do anything, so subclassing
	from it comes for free.

	2003-04-18  Andras Varga
	* cenvir.h: removed foreignPuts() method, no longer used by parallel
	simulation.

	2003-04-09  Andras Varga
	* csimul.h: added guessNextModule() method, to be used from Tkenv
	in "next module" gauge.

	2003-04-01  Andras Varga
	* cenvir.h: runningMode() removed (because of reorganization of
	parallel simulation support)

	2003-03-31  Andras Varga
	* omnetpp.h, csimul.h; removed cnetmod.h: cNetMod and all references
	to it are removed -- parallel simulation is represented in cSimulation
	via cParsimSegment.
	* csimplemodule.h: syncpoint calls removed.

	2003-03-25  Andras Varga
	* cmodule.h, csimplemodule.h: method isSimple() moved to base class
	cModule where it uses dynamic_cast.
	* cenvir.h: getLocalMachineFor() has been replaced by isModuleLocal()
	* ctypes.h: cModuleType::create(): last arg "bool local" removed
	(it is now determined inside, by calling new method ev.isModuleLocal());
	also added overloaded create() method which takes module index and
	module vector size, and contains cModule::setIndex().

	* cmodule.h: cModule methods setId(), setIndex(), setModuleType()
	made protected. (They're called internally during the module creation
	process, from cModuleType::create().)

2003-03-24  Andras Varga
